# TRexGeant4

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  OGLS_vis.mac  README.md  RootLinkDef.h  TRexGeant4.cc  TRexGeant4.cc~  compile.sh  loadLibraries.C  myVis.mac  vis.mac
cmakeScripts/: FindROOT.cmake
include/: Annular.hh  Barrel.hh  Element.hh  G4LindhardPartition.hh  G4ScreenedNuclearRecoil.hh  Germanium.hh  HadronicStackingAction.hh  Isotopes.hh  Kinematic.hh  Material.hh  MySteppingAction.hh  ParticleMC.hh  PhysicsList.hh  TRexActionInitialization.hh  TRexActionInitialization.hh~  TRexAlphaSource.hh  TRexAngularDistribution.hh  TRexBarrel.hh  TRexBarrelDeltaE.hh  TRexBarrelDeltaESingle.hh  TRexBarrelDeltaESingleSensitiveDetector.hh  TRexBarrelErest.hh  TRexBarrelErestSingle.hh  TRexBarrelErestSingleSensitiveDetector.hh  TRexBaseDetector.hh  TRexBaseGenerator.hh  TRexBeam.hh  TRexBeamIn.hh  TRexCD.hh  TRexCDErest.hh  TRexCDErestSingle.hh  TRexCDErestSingleSensitiveDetector.hh  TRexCDdeltaE.hh  TRexCDdeltaESingle.hh  TRexCDdeltaESingleSensitiveDetector.hh  TRexColour.hh  TRexData.hh  TRexDetectorConstruction.hh  TRexEventAction.hh  TRexHit.hh  (+31 more)
src/: Annular.cc  Barrel.cc  Element.cc  G4LindhardPartition.cc  G4ScreenedNuclearRecoil.cc  Germanium.cc  HadronicStackingAction.cc  Isotopes.cc  Kinematic.cc  Material.cc  MySteppingAction.cc  ParticleMC.cc  PhysListEmStandard.cc  PhysicsList.cc  TRexActionInitialization.cc  TRexActionInitialization.cc~  TRexAlphaSource.cc  TRexAngularDistribution.cc  TRexBarrel.cc  TRexBarrelDeltaE.cc  TRexBarrelDeltaESingle.cc  TRexBarrelDeltaESingleSensitiveDetector.cc  TRexBarrelErest.cc  TRexBarrelErestSingle.cc  TRexBarrelErestSingleSensitiveDetector.cc  TRexBaseDetector.cc  TRexBaseGenerator.cc  TRexBeam.cc  TRexBeamIn.cc  TRexCD.cc  TRexCDErest.cc  TRexCDErestSingle.cc  TRexCDErestSingleSensitiveDetector.cc  TRexCDdeltaE.cc  TRexCDdeltaESingle.cc  TRexCDdeltaESingleSensitiveDetector.cc  TRexColour.cc  TRexData.cc  TRexDetectorConstruction.cc  TRexDetectorConstruction.cc~  (+27 more)
